--- a/views/prehistoric_creatures/index.ejs
+++ b/views/prehistoric_creatures/index.ejs
@@ -1,7 +1,20 @@
-<ul>
+<!-- <ul>
     <% creaturesData.forEach((creatures) =>{ %>
         <li>
-            <%= creatures.Type %> looks like <%= creatures.img_URL  %> 
+            <%= creatures.type %> <img src="<%= creatures.img_url  %>"/>
+        </li>
+
+  <%  }) %> 
+</ul> -->
+
+
+<ul>
+    <% creaturesData.forEach((creatures, index) =>{ %>
+        <li>
+            <%= creatures.type %>: <img src="<%= creatures.img_url  %>"/>
+            <form action="/prehistoric_creatures index %>?_method=DELETE" method="POST">
+                <input type="submit" value="delete">
+            </form>
         </li>
 
   <%  }) %> 
